<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
    <string name="imagem">imagem da cidade</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="pagamento_aviso_texto">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_pagamento_texto">R$ 421,50</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="nome_no_cartao">Nome no Cartão</string>
    <string name="finalizar">Finalizar compra</string>
    <string name="digitos_do_nome">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="confira">Confira o resumo da compra:</string>
    <string name="local">São Paulo</string>
    <string name="data_pacote">08/12 - 10/12 de 2017</string>
    <string name="preco_pacote">R$ 243,99</string>
    <string name="pagamento_texto">Valor da compra:</string>
    <string name="descricao1">Fundo do parabéns</string>
    <string name="descricao_imagem">Imagem do local</string>
</resources>
