<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_compra_fundo_laranja"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/descricao1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/resumo_compra_parabens"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/parabens"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/resumo_compra_fundo_laranja"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_fundo_laranja"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_fundo_laranja"
        app:layout_constraintTop_toTopOf="@id/resumo_compra_fundo_laranja"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumo_compra_finalizada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/compra_com_sucesso"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_parabens"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_parabens"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_parabens" />

    <TextView
        android:id="@+id/resumo_compra_texto_confirmacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/confira"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_fundo_laranja" />

    <ImageView
        android:id="@+id/resumo_compra_imagem_local"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/descricao_imagem"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_texto_confirmacao"
        tools:src="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_local_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_imagem_local"
        tools:text="@string/local" />

    <TextView
        android:id="@+id/resumo_compra_data_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_local_pacote"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_local_pacote"
        tools:text="@string/data_pacote" />

    <TextView
        android:id="@+id/resumo_compra_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_data_viagem"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_data_viagem"
        tools:text="@string/preco_pacote" />

</android.support.constraint.ConstraintLayout>
